force-app/main/default/objects/Receipt__c/fields/Amount_By_Bank__c.field-meta.xml
<CustomField>
    <fullName>Amount_By_Bank__c</fullName>
    <label>Amount By Bank</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Payment_From__c</field>
        <operation>equals</operation>
        <value>Bank</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Approval_Status1__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>