force-app/main/default/objects/Receipt__c/fields/Backend_Text__c.field-meta.xml
<CustomField>
    <fullName>Backend_Text__c</fullName>
    <label>Backend Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>