force-app/main/default/objects/Receipt__c/fields/Booking_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Booking_Customer_Address__c</fullName>
    <formula>Booking__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Customer Address</label>
    <type>Text</type>
</CustomField>