force-app/main/default/objects/Receipt__c/fields/Booking_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Customer_Name__c</fullName>
    <formula>Booking__r.First_Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Customer Name</label>
    <type>Text</type>
</CustomField>