force-app/main/default/objects/Receipt__c/fields/Booking_Owner__c.field-meta.xml
<CustomField>
    <fullName>Booking_Owner__c</fullName>
    <formula>IF(Booking__r.Owner:User.IsActive,Booking__r.Owner:User.Id,Booking__r.CRM_Manager__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Owner</label>
    <type>Text</type>
</CustomField>