force-app/main/default/objects/Receipt__c/fields/FlatVilla_Type__c.field-meta.xml
<CustomField>
    <fullName>FlatVilla_Type__c</fullName>
    <formula>text(Booking__r.Plot__r.Flat_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flat/Villa Type</label>
    <type>Text</type>
</CustomField>