force-app/main/default/objects/Receipt__c/fields/Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>Floor_Number__c</fullName>
    <formula>TEXT(Booking__r.Plot__r.Floor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Number</label>
    <type>Text</type>
</CustomField>