force-app/main/default/objects/Receipt__c/fields/Payment_Received_Bank__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Bank__c</fullName>
    <label>Payment Received Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>Bank Of India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>