force-app/main/default/objects/Receipt__c/fields/Total_Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending_Amount__c</fullName>
    <formula>Total_Amount__c -  Total_Received_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pending Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>