force-app/main/default/objects/Receipt__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>Receipt_date__c</columns>
    <columns>Booking_Customer_Name__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>equals</operation>
        <value>Rhythm of Rain</value>
    </filters>
    <filters>
        <field>Approval_status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Total_Received_Amount__c</field>
        <operation>lessThan</operation>
        <value>5000000</value>
    </filters>
    <label>Approved</label>
</ListView>